--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -8,9 +8,13 @@
   <title>NHNEdu_김윤지</title>
 </head>
 <body>
-  <section class="container">
+  <div class="container">
     <h1>NHN Edu 서버개발 연동파트 사전과제</h1>
-
-  </section>
+    <div class="mx-3">
+      <input type="text" class="form-control" style="width: 300px;height: 40px;"  aria-label="Recipient's username" aria-describedby="button-addon2">
+      <button class="btn btn-outline-dark" style="height: 45px;" type="button" id="button-addon2">확인</button>
+    </div>
+      
+  </div>
 </body>
 </html>
